--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-otros-temas/form-otros-temas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-otros-temas/form-otros-temas.component.html
@@ -141,7 +141,7 @@
               (addressForm.get('observacionesDecision').invalid && estaEditando)
             "
           >
-            Observaciones
+            Recomendaciones/Observaciones
           </label>
         </div>
         <div class="col d-flex">
