--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
@@ -124,7 +124,7 @@
         </div>
       </div>
 
-      <h2 class="card-subTitle">Recomendaciones/Observaciones</h2>
+      <h2 class="card-subTitle">Observaciones</h2>
       <div class="reparacion-card row" *ngIf="tieneVotacion">
         <div class="col-md-4">
           Resultado de la votación <b class="colorMainColor">{{ resultadoVotacion }}</b>
@@ -229,7 +229,7 @@
               (addressForm.get('observaciones').invalid && estaEditando)
             "
           >
-            Observaciones de la solicitud
+            Recomendaciones/Observaciones
           </label>
         </div>
         <div class="col d-flex">
