--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-solicitudes-contractuales/tabla-solicitudes-contractuales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-solicitudes-contractuales/tabla-solicitudes-contractuales.component.html
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-    <table mat-table [dataSource]="dataSource" matSort class="tabla">
+    <table mat-table [dataSource]="dataSource" matSort class="tabla" [ngClass]="verDetalle ? 'tabla-gris' : ''">
 
         <ng-container matColumnDef="fechaSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
