--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
@@ -263,7 +263,7 @@
                     <b>Estado de la solicitud</b>: <span class="text-color"> {{ tema.estadoTemaCodigo }} </span>
                   </p>
                   <section>
-                    <b>Observaciones</b>:
+                    <b>Recomendaciones/Observaciones</b>:
                     <div class="text-color" [innerHTML]="innerObservacion(tema.observacionesDecision)"></div>
                   </section>
                   <h2 class="card-subTitle">Compromisos</h2>
@@ -359,7 +359,7 @@
                     <b>Estado de la solicitud</b>: <span class="text-color"> {{ tema.estadoTemaCodigo }} </span>
                   </p>
                   <section>
-                    <b>Observaciones</b>:
+                    <b>Recomendaciones/Observaciones</b>:
                     <div class="text-color" [innerHTML]="innerObservacion(tema.observacionesDecision)"></div>
                   </section>
                   <h2 class="card-subTitle">Compromisos</h2>
