--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
@@ -30,9 +30,10 @@
                                 <mat-form-field class="full-width" >
                                     <input
                                         matInput
-                                        type="number"
                                         [formControl]="valorPorAmortizar"
                                         disabled
+                                        currencyMask
+                                        [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
                                     >
                                 </mat-form-field>
                             </div>
