--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -323,7 +323,7 @@
                     color="warn"
                     class="btn-guardar"
                     type="submit"
-                    [disabled]="addressForm.dirty === false">
+                    [disabled]="!addressForm.dirty && !addressForm.get('aplicaDescuento').value === false">
                     <img src="assets/img/icon/guardar.svg">
             </button>
         </div>
