--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-detalle-factura-proyectos/form-detalle-factura-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-detalle-factura-proyectos/form-detalle-factura-proyectos.component.html
@@ -54,6 +54,7 @@
                                     [listaMenusId]="listaMenusId"
                                     [registrarSolicitudPagoObs]="registrarSolicitudPagoObs"
                                     [esVerDetalle]="esVerDetalle"
+                                    [idSolicitud]="idSolicitud"
                                     (estadoSemaforoProyecto)="proyecto.get( 'registroCompleto' ).setValue( $event );checkRegistroCompleto()">
                 </app-form-proyecto>
             </div>
