--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
@@ -42,13 +42,14 @@
 
                 <div *ngIf="fases.length > 0" class="mt-3em">
                     <mat-accordion *ngFor="let fase of fases.controls; index as i">
-                        <!-- *ngIf="
+                        <mat-expansion-panel
+                        *ngIf="
+                            mostrarAmortizacion &&
                             fase.get('codigo').value === fasesContrato.construccion &&
                             manejoAnticipoRequiere === true &&
                             fase.get('tieneAnticipo').value === false &&
-                            contrato.solicitudPago.length > 1 
-                        " -->
-                        <mat-expansion-panel
+                            contrato.solicitudPago.length > 1
+                        "
                             class="expansion-style sub-expansion-black"
                         >
                             <mat-expansion-panel-header class="expansion-style--header">
