--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -185,7 +185,10 @@
                       </mat-panel-title>
                     </mat-expansion-panel-header>
         
-                    <app-form-detalle-factura-proyectos [contrato]="contrato" [esVerDetalle]="esVerDetalle"></app-form-detalle-factura-proyectos>
+                    <app-form-detalle-factura-proyectos [contrato]="contrato"
+                                                        [esVerDetalle]="esVerDetalle"
+                                                        [idSolicitud]="idSolicitud"
+                                                        ></app-form-detalle-factura-proyectos>
                   </mat-expansion-panel>
             </mat-accordion>
 
