--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.scss
@@ -3,17 +3,17 @@
         text-align: center;
         margin-bottom: 3em;
     }
-  
+
     &--btn {
         padding: .5em 2em;
-        min-width: 25%;
+        width: 25%;
         box-shadow: none;
         border: solid 1px #fff;
 
         @media only screen and (max-width: 24em) {
           width: 100%;
         }
-  
+
         &.active {
             background-color: #0A244F;
             z-index: 1;
@@ -22,7 +22,7 @@
     }
     &--btn2 {
       padding: .5em 2em;
-      min-width: 32%;
+      width: 25%;
       box-shadow: none;
       border: solid 1px #fff;
 
