ocultar btn liberación
por si las moscas

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.scss
@@ -6,7 +6,7 @@
 
     &--btn {
         padding: .5em 2em;
-        width: 25%;
+        min-width: 25%;
         box-shadow: none;
         border: solid 1px #fff;
 
@@ -22,7 +22,7 @@
     }
     &--btn2 {
       padding: .5em 2em;
-      width: 25%;
+      min-width: 25%;
       box-shadow: none;
       border: solid 1px #fff;
 
