--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-proyecto/form-proyecto.component.html
@@ -42,6 +42,29 @@
 
                 <div *ngIf="fases.length > 0" class="mt-3em">
                     <mat-accordion *ngFor="let fase of fases.controls; index as i">
+                        <mat-expansion-panel
+                            *ngIf="
+                                mostrarAmortizacion &&
+                                fase.get( 'codigo' ).value === fasesContrato.construccion &&
+                                manejoAnticipoRequiere === true &&
+                                fase.get( 'tieneAnticipo' ).value === false &&
+                                contrato.solicitudPago.length > 1
+                            "
+                            class="expansion-style sub-expansion-black"
+                        >
+                            <mat-expansion-panel-header class="expansion-style--header">
+                                <mat-panel-title class="expansion-style--title font-size-09em">
+                                    Amortización del anticipo - {{ fase.get( 'codigo' ).value === fasesContrato.preConstruccion ? 'Fase 1' : 'Fase 2' }}
+                                </mat-panel-title>
+                            </mat-expansion-panel-header>
+
+                            <app-form-amortizacion 
+                            [solicitudPago]="contrato.solicitudPagoOnly"
+                            [contrato]="contrato"
+                            [contratacionProyectoId]="proyecto.get('contratacionProyectoId').value"
+                            [desabilitarAcordeonAmortizacionAnticipo]="desabilitarAcordeonAmortizacionAnticipo"
+                            ></app-form-amortizacion>
+                        </mat-expansion-panel>
                         <mat-expansion-panel class="expansion-style sub-expansion-black">
                             <mat-expansion-panel-header class="expansion-style--header">
                               <mat-panel-title class="expansion-style--title font-size-09em">
@@ -57,16 +80,6 @@
                                                     [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
                                                     (emitAnticipo)="fase.get( 'tieneAnticipo' ).setValue( $event )">
                             </app-obs-criterio-pagos>
-                        </mat-expansion-panel>
-
-                        <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="fase.get( 'codigo' ).value === fasesContrato.construccion && manejoAnticipoRequiere === true && fase.get( 'tieneAnticipo' ).value === false && contrato.solicitudPago.length > 1">
-                            <mat-expansion-panel-header class="expansion-style--header">
-                                <mat-panel-title class="expansion-style--title font-size-09em">
-                                    Amortización del anticipo - {{ fase.get( 'codigo' ).value === fasesContrato.preConstruccion ? 'Fase 1' : 'Fase 2' }}
-                                </mat-panel-title>
-                            </mat-expansion-panel-header>
-
-                            <app-form-amortizacion  [solicitudPago]="contrato.solicitudPagoOnly" [contrato]="contrato" [contratacionProyectoId]="proyecto.get( 'contratacionProyectoId' ).value"></app-form-amortizacion>
                         </mat-expansion-panel>
 
                         <mat-expansion-panel class="expansion-style sub-expansion-black">
