--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-proposiciones-y-varios/form-proposiciones-y-varios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-proposiciones-y-varios/form-proposiciones-y-varios.component.html
@@ -153,7 +153,7 @@
       </div>
       <!-- <div class="row">
           <div class="pr-1">
-            <label class="label-left" for="url">URL con soporte de votación</label>
+            <label class="label-left" for="url">URL con soportes</label>
           </div>
           <div class="col">
             <mat-form-field class="full-width">
