--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
@@ -284,7 +284,7 @@
               (addressForm.get('url').invalid && estaEditando)
             "
           >
-            URL con soporte de votación
+            URL con soportes
           </label>
         </div>
         <div class="col">
