--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-solicitud/form-solicitud.component.html
@@ -299,7 +299,7 @@
               (addressForm.get('url').invalid && estaEditando)
             "
           >
-            URL con soporte de votación
+            URL con soportes
           </label>
         </div>
         <div class="col">
