--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/tabla-registro-seguimiento-diario/tabla-registro-seguimiento-diario.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/tabla-registro-seguimiento-diario/tabla-registro-seguimiento-diario.component.html
@@ -103,7 +103,8 @@
                       class="btn-table"
                       type="button"
                       (click)="Editar( element )"
-                      *ngIf="(element.seguimientoDiarioId > 0 && element.estadoCodigo === '1') && element.cumpleCondicionesTai === false">
+                      *ngIf="(element.seguimientoDiarioId > 0 && element.estadoCodigo === '1') && element.cumpleCondicionesTai === false"
+                      > 
         Ver detalle/Editar
         </a>
 
